--- a/angular.json
+++ b/angular.json
@@ -25,14 +25,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/swiper/swiper-bundle.min.css"
+              "src/styles.css"
 
-            ],
-            "scripts": [
-              "src/assets/js/plugins.js",
-              "src/assets/js/theme.js"
             ]
+          
           },
           "configurations": {
             "production": {
@@ -117,6 +113,9 @@
               "browserTarget": "SaarzInt:build:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
